Fix navigation on iPhone 5

--- a/src/sass/components/_navigation.scss
+++ b/src/sass/components/_navigation.scss
@@ -34,7 +34,10 @@
 
 .nav-logos a {
   display: block;
-  margin-right: $spacing-6;
+
+  @include on-tablet {
+    margin-right: $spacing-6;
+  }
 }
 .nav-logos a:last-child {
   margin-right: 0;
@@ -42,7 +45,11 @@
 
 .nav-logos img {
   display: block;
-  height: 56px;
+  height: 42px;
+
+  @include on-mobile-lg {
+    height: 56px;
+  }
 }
 
 .nav-logos .nav-logos__de {
